objects/FieloEE__Reward__c.object
<CustomObject>
    <description>Rewards that members can redeem. Rewards are shown in a catalog that can be browsed in the members’ portal.</description>
    <fields>
        <fullName>CategoryName_BG__c</fullName>
        <formula>FieloEE__Category__r.Name_BG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - BG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_CS__c</fullName>
        <formula>FieloEE__Category__r.Name_CS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - CS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_DA__c</fullName>
        <formula>FieloEE__Category__r.Name_DA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - DA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_DE__c</fullName>
        <formula>FieloEE__Category__r.Name_DE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - DE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_EL__c</fullName>
        <formula>FieloEE__Category__r.Name_EL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - EL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_EN__c</fullName>
        <formula>FieloEE__Category__r.Name_EN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - EN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_ES__c</fullName>
        <formula>FieloEE__Category__r.Name_ES__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - ES</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_FI__c</fullName>
        <formula>FieloEE__Category__r.Name_FI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - FI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_FR__c</fullName>
        <formula>FieloEE__Category__r.Name_FR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - FR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_HR__c</fullName>
        <formula>FieloEE__Category__r.Name_HR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - HR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_HU__c</fullName>
        <formula>FieloEE__Category__r.Name_HU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - HU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_IN__c</fullName>
        <formula>FieloEE__Category__r.Name_IN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - IN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_IT__c</fullName>
        <formula>FieloEE__Category__r.Name_IT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - IT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_JA__c</fullName>
        <formula>FieloEE__Category__r.Name_JA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - JA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_KO__c</fullName>
        <formula>FieloEE__Category__r.Name_KO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - KO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_NL__c</fullName>
        <formula>FieloEE__Category__r.Name_NL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - NL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_NO__c</fullName>
        <formula>FieloEE__Category__r.Name_NO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - NO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_PL__c</fullName>
        <formula>FieloEE__Category__r.Name_PL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - PL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_PT__c</fullName>
        <formula>FieloEE__Category__r.Name_PT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - PT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_RO__c</fullName>
        <formula>FieloEE__Category__r.Name_RO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - RO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_RU__c</fullName>
        <formula>FieloEE__Category__r.Name_RU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - RU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_SH__c</fullName>
        <formula>FieloEE__Category__r.Name_SH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - SH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_SK__c</fullName>
        <formula>FieloEE__Category__r.Name_SK__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - SK</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_SV__c</fullName>
        <formula>FieloEE__Category__r.Name_SV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - SV</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_TH__c</fullName>
        <formula>FieloEE__Category__r.Name_TH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - TH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_TR__c</fullName>
        <formula>FieloEE__Category__r.Name_TR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - TR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_VI__c</fullName>
        <formula>FieloEE__Category__r.Name_VI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name - VI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName_ZH__c</fullName>
        <formula>FieloEE__Category__r.Name_ZH__c</formula>
        <label>Category Name - ZH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryName__c</fullName>
        <formula>FieloEE__Category__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_BG__c</fullName>
        <label>Description - BG</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_CS__c</fullName>
        <label>Description - CS</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_DA__c</fullName>
        <label>Description - DA</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_DE__c</fullName>
        <label>Description - DE</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_EL__c</fullName>
        <label>Description - EL</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_EN__c</fullName>
        <label>Description - EN</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_ES__c</fullName>
        <label>Description - ES</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_FI__c</fullName>
        <label>Description - FI</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_FR__c</fullName>
        <label>Description - FR</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_HR__c</fullName>
        <label>Description - HR</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_HU__c</fullName>
        <label>Description - HU</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_IN__c</fullName>
        <label>Description - IN</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_IT__c</fullName>
        <label>Description - IT</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_JA__c</fullName>
        <label>Description - JA</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_KO__c</fullName>
        <label>Description - KO</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_NL__c</fullName>
        <label>Description - NL</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_NO__c</fullName>
        <label>Description - NO</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_PL__c</fullName>
        <label>Description - PL</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_PT__c</fullName>
        <label>Description - PT</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_RO__c</fullName>
        <label>Description - RO</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_RU__c</fullName>
        <label>Description - RU</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_SH__c</fullName>
        <label>Description - SH</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_SK__c</fullName>
        <label>Description - SK</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_SV__c</fullName>
        <label>Description - SV</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_TH__c</fullName>
        <label>Description - TH</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_TR__c</fullName>
        <label>Description - TR</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_VI__c</fullName>
        <label>Description - VI</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_ZH__c</fullName>
        <label>Description - ZH</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalGiftSKU__c</fullName>
        <label>External Gift SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_CopyDefLangValue__c</fullName>
        <description>EN (English) field values will be copied over all selected language fields.</description>
        <inlineHelpText>EN (English) field values will be copied over all selected language fields.</inlineHelpText>
        <label>Copy EN field content to</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>F_PRM_Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>F_PRM_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>PRMCountry__c</referenceTo>
        <relationshipLabel>Reward</relationshipLabel>
        <relationshipName>Reward</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_PRM_IsRegion__c</fullName>
        <description>Indicates if the related PRM Country/Cluster is a Region</description>
        <formula>F_PRM_Country__r.F_PRM_IsRegion__c</formula>
        <label>Is Region?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F_PRM_PointLabel__c</fullName>
        <formula>$Label.CLPRMMAR16003</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Point Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_PreviousPoints__c</fullName>
        <description>Used to display a previous amount of points (for special prizes)</description>
        <label>Previous Points</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>F_PRM_QuantityLabel__c</fullName>
        <formula>$Label.CLPRMMAR16010</formula>
        <label>Quantity Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_RewardFilter__c</fullName>
        <externalId>true</externalId>
        <label>Reward Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__AttachmentId__c</fullName>
        <description>Image of this reward.</description>
        <label>Image</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__AvailableDays__c</fullName>
        <description>Number of days during which the voucher will be valid. If left blank, the voucher will not expire.</description>
        <inlineHelpText>Specify how many days the voucher will be usable since the redemption is created. Leave it blank if you do not want an expiration date.</inlineHelpText>
        <label>Reward Voucher Validity (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The category to which the reward belongs.</description>
        <inlineHelpText>Choose the category from the list where this reward will appear on the member portal.</inlineHelpText>
        <label>Category</label>
        <referenceTo>FieloEE__Category__c</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Prizes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__CondenserId__c</fullName>
        <label>Condenser Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__Description__c</fullName>
        <description>A description of this reward to be showed in the members&apos; portal.</description>
        <inlineHelpText>Detailed description of the product to be shown in the front end.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__ExpirationDate__c</fullName>
        <description>Expiration date for this reward.</description>
        <inlineHelpText>Specify the expiration date of the reward.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloEE__ExternalName__c</fullName>
        <label>External Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__HasSegments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Multi Segment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Image__c</fullName>
        <formula>&quot;&lt;img src=\&quot; servlet/servlet.FileDownload?file=&quot; &amp; FieloEE__AttachmentId__c &amp; &quot;\&quot;/&gt;&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__InstructionsRichText__c</fullName>
        <description>Detailed instructions for redeeming this reward.</description>
        <label>Instructions RichText</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieloEE__Instructions__c</fullName>
        <description>Instructions to redeem this reward that will appear in the voucher. These instructions overrule the instructions in Settings.</description>
        <inlineHelpText>Steps to get the reward detailed in vouchers, these instructions overwrite the instructions written in settings</inlineHelpText>
        <label>Specific Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__Intangible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated Field</description>
        <inlineHelpText>Click here to set an unlimited quantity for this reward.</inlineHelpText>
        <label>zz_deprecated_Unlimited Quantity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__ItemsAvailableReadOnly__c</fullName>
        <formula>IF( ISPICKVAL(FieloEE__VoucherCreationMode__c  , &apos;Unlimited&apos;) , $Label.fieloee__inforewardgenerateitemswhenstockunlimited ,  TEXT( FieloEE__Stock__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Items Available (Read Only)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloEE__PointsCant__c</fullName>
        <description>Number of points to redeem this reward.</description>
        <inlineHelpText>Value of points to redeem the reward</inlineHelpText>
        <label>Points</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Price__c</fullName>
        <description>The cost of purchasing this reward for your company.</description>
        <inlineHelpText>Specify the cost of purchase of this reward. This will be used only for reporting purposes.</inlineHelpText>
        <label>Unit Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FieloEE__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The program to which this reward belongs.</description>
        <label>Program</label>
        <referenceTo>FieloEE__Program__c</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Rewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__QuantityAvailable__c</fullName>
        <description>Total stock.</description>
        <inlineHelpText>The available quantity of the reward.</inlineHelpText>
        <label>Quantity Available</label>
        <summaryFilterItems>
            <field>FieloEE__RewardItem__c.FieloEE__Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>FieloEE__RewardItem__c.FieloEE__IsCondenser__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>FieloEE__RewardItem__c.FieloEE__Reward__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FieloEE__QuantityComments__c</fullName>
        <label>Quantity Comments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__QuantityFieloPoints__c</fullName>
        <description>Deprecated Field</description>
        <inlineHelpText>Specify the value in Mall Points to redeem this reward.</inlineHelpText>
        <label>zz_deprecated_Mall Point Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__QuantityLikes__c</fullName>
        <label>Quantity Likes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__QuantityPending__c</fullName>
        <description>Deprecated Field</description>
        <label>zz_deprecated_Quantity Pending</label>
        <summaryFilterItems>
            <field>FieloEE__RewardItem__c.FieloEE__Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </summaryFilterItems>
        <summaryForeignKey>FieloEE__RewardItem__c.FieloEE__Reward__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FieloEE__QuantityRedeem__c</fullName>
        <description>Total redeemed of the product</description>
        <inlineHelpText>The quantity of the reward that has been redeemed.</inlineHelpText>
        <label>Quantity Redeem</label>
        <summaryFilterItems>
            <field>FieloEE__RewardItem__c.FieloEE__Status__c</field>
            <operation>equals</operation>
            <value>Unavailable</value>
        </summaryFilterItems>
        <summaryForeignKey>FieloEE__RewardItem__c.FieloEE__Reward__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FieloEE__RedemptionRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deprecated Field</description>
        <inlineHelpText>Specify the rule that will apply toward the redemption of the prize.</inlineHelpText>
        <label>Segment</label>
        <referenceTo>FieloEE__RedemptionRule__c</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Prizes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__RewardFacilitator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The provider of this reward.</description>
        <inlineHelpText>Specify the provider of this reward. Leave it blank if this reward has not provider</inlineHelpText>
        <label>Reward Facilitator</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rewards</relationshipLabel>
        <relationshipName>Rewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__StockWarning__c</fullName>
        <description>Stock quantity of this reward that will trigger an email warning you that the stock is low.</description>
        <inlineHelpText>Specify the stock limit alert. This will be used to send alert email.</inlineHelpText>
        <label>Stock Warning</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Stock__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of units of this reward.</description>
        <label>Items Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__UniqueVoucher__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this option will create a voucher with two or more items of this reward.</description>
        <inlineHelpText>Check this option if you want to create a voucher in a redemption that have two or more items of this reward. This voucher will show the quantity field.</inlineHelpText>
        <label>Unique Voucher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__VotesQuantity__c</fullName>
        <description>Rate of the product</description>
        <inlineHelpText>This is the quantity of &apos;likes&apos; the reward received by members.</inlineHelpText>
        <label>Quantity Votes</label>
        <summaryForeignKey>FieloEE__RewardLike__c.FieloEE__Reward__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FieloEE__VoucherCreationMode__c</fullName>
        <description>If voucher numbers are from a provider, vouchers are Preload, if the system creates them, they are Random</description>
        <inlineHelpText>Choose the voucher creation mode</inlineHelpText>
        <label>Stock Management</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Controlled By Quantity</fullName>
                </value>
                <value>
                    <fullName>Controlled By Item</fullName>
                </value>
                <value>
                    <fullName>Unlimited</fullName>
                    <default>true</default>
                    <label>Unlimited</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloEE__isInstantReward__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this option will make this reward redeemable for a specific action, instead of points.</description>
        <inlineHelpText>Check this option if you want to give this reward for free (for no points) when the member does a special action.</inlineHelpText>
        <label>Instant Reward</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fielo_CheckoutInformation__c</fullName>
        <formula>$Label.Fielo_CheckoutHelpText</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Checkout Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GiftAgency__c</fullName>
        <label>Gift Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_BG__c</fullName>
        <label>Reward Name - BG</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_CS__c</fullName>
        <label>Reward Name - CS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_DA__c</fullName>
        <label>Reward Name - DA</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_DE__c</fullName>
        <label>Reward Name - DE</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_EN__c</fullName>
        <label>Reward Name - EN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_ES__c</fullName>
        <label>Reward Name - ES</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_El__c</fullName>
        <label>Reward Name - El</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_FI__c</fullName>
        <label>Reward Name - FI</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_FR__c</fullName>
        <label>Reward Name - FR</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_HR__c</fullName>
        <label>Reward Name - HR</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_HU__c</fullName>
        <label>Reward Name - HU</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_IN__c</fullName>
        <label>Reward Name - IN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_IT__c</fullName>
        <label>Reward Name - IT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_JA__c</fullName>
        <label>Reward Name - JA</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_KO__c</fullName>
        <label>Reward Name - KO</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_NL__c</fullName>
        <label>Reward Name - NL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_NO__c</fullName>
        <label>Reward Name - NO</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_PL__c</fullName>
        <label>Reward Name - PL</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_PT__c</fullName>
        <label>Reward Name - PT</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_RO__c</fullName>
        <label>Reward Name - RO</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_RU__c</fullName>
        <label>Reward Name - RU</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_SH__c</fullName>
        <label>Reward Name - SH</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_SK__c</fullName>
        <label>Reward Name - SK</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_SV__c</fullName>
        <label>Reward Name - SV</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_TH__c</fullName>
        <label>Reward Name - TH</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_TR__c</fullName>
        <label>Reward Name - TR</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_VI__c</fullName>
        <label>Reward Name - VI</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_ZH__c</fullName>
        <label>Reward Name - ZH</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Reward</label>
    <listViews>
        <fullName>AE_RTx_UAE_Electrician_Rewards</fullName>
        <columns>F_PRM_Country__c</columns>
        <columns>F_PRM_RewardFilter__c</columns>
        <columns>F_PRM_IsActive__c</columns>
        <columns>FieloEE__ExpirationDate__c</columns>
        <columns>NAME</columns>
        <columns>Name_EN__c</columns>
        <columns>FieloEE__PointsCant__c</columns>
        <columns>FieloEE__Price__c</columns>
        <columns>CategoryName__c</columns>
        <columns>CategoryName_EN__c</columns>
        <columns>FieloEE__RedemptionRule__c</columns>
        <columns>FieloEE__HasSegments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>F_PRM_Country__c</field>
            <operation>equals</operation>
            <value>United Arab Emirates</value>
        </filters>
        <filters>
            <field>F_PRM_RewardFilter__c</field>
            <operation>equals</operation>
            <value>P-AE-SC7</value>
        </filters>
        <label>AE-RTx-UAE Electrician Rewards</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AE_SCx_UAE_Electrician_Rewards</fullName>
        <columns>F_PRM_Country__c</columns>
        <columns>F_PRM_RewardFilter__c</columns>
        <columns>F_PRM_IsActive__c</columns>
        <columns>FieloEE__ExpirationDate__c</columns>
        <columns>NAME</columns>
        <columns>Name_EN__c</columns>
        <columns>FieloEE__PointsCant__c</columns>
        <columns>FieloEE__Price__c</columns>
        <columns>CategoryName__c</columns>
        <columns>CategoryName_EN__c</columns>
        <columns>FieloEE__RedemptionRule__c</columns>
        <columns>FieloEE__HasSegments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>F_PRM_Country__c</field>
            <operation>equals</operation>
            <value>United Arab Emirates</value>
        </filters>
        <filters>
            <field>F_PRM_RewardFilter__c</field>
            <operation>equals</operation>
            <value>P-AE-SC7</value>
        </filters>
        <label>AE-SCx-UAE Electrician Rewards</label>
        <language>en_US</language>
    </listViews>
</CustomObject>